fix favorites, always visible for all

--- a/frontend/src/components/layout/NavBar.module.scss
+++ b/frontend/src/components/layout/NavBar.module.scss
@@ -8,25 +8,30 @@
     width: 100%;
     margin-top: 10px;
     
-}
+    .left {
+        display: flex;
+        align-items: center;
+    }
 
-.navbar .left {
-    display: flex;
-    align-items: center;
-}
+    .right {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 
-.navbar .right {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
+    .logo {
+        width: 50px;
+    }
 
-.navbar img {
-    width: 50px;
-}
+    .links a{
+        margin-right: 10px; /* Add some margin between links */
+        padding: 10px;
+        border-radius: 5px;
+    }
 
-.navbar .links a{
-    margin-right: 10px; /* Add some margin between links */
-    padding: 10px;
-    border-radius: 5px;
+    .favoriteIcon {
+        width: 30px;
+        height: 30px;
+    }
+
 }
